prod_snapshot_2015-09-24_1030/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Manager_Print_Email__c</fullName>
        <formula>IF(NOT(ISBLANK(Account.Account_Manager_Print__c)), Account.Account_Manager_Print__r.Email, Account.Account_Manager__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager Print Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Print_FName__c</fullName>
        <formula>IF(NOT(ISBLANK(Account.Account_Manager_Print__c)), Account.Account_Manager_Print__r.FirstName , Account.Account_Manager__r.FirstName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager Print FName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Print_HeShe__c</fullName>
        <formula>IF(NOT(ISBLANK(Account.Account_Manager_Print__c)),  TEXT(Account.Account_Manager_Print__r.SheHe__c)  ,  TEXT(Account.Account_Manager__r.SheHe__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager Print HeShe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Print_HimHer__c</fullName>
        <formula>IF(NOT(ISBLANK(Account.Account_Manager_Print__c)), Account.Account_Manager_Print__r.HerHim__c, Account.Account_Manager__r.HerHim__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager Print HimHer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Print_LName__c</fullName>
        <formula>IF(NOT(ISBLANK(Account.Account_Manager_Print__c)), Account.Account_Manager_Print__r.LastName , Account.Account_Manager__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager Print LName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Print_Phone__c</fullName>
        <formula>IF(NOT(ISBLANK(Account.Account_Manager_Print__c)), Account.Account_Manager_Print__r.Phone , Account.Account_Manager__r.Phone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager Print Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Print_Self__c</fullName>
        <formula>IF(NOT(ISBLANK(Account.Account_Manager_Print__c)), Account.Account_Manager_Print__r.herselfhimself__c, Account.Account_Manager__r.herselfhimself__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager Print Self</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>IF(NOT(ISBLANK(Account.Account_Manager_Print__c)), Account.Account_Manager_Print_FName__c + &quot; &quot; +  Account.Account_Manager_Print_LName__c, Account.Account_Manager__r.FirstName + &quot; &quot; +  Account.Account_Manager__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Market_Id__c</fullName>
        <formula>Account.DC_Market__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Market Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Associate_InActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associate InActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Email_AM_Assignment_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Email - AM Assignment Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Email_Call_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Email - Call Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Email_Care_Request_Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Email - Care Request Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Email_Digital_Audit_Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Email - Digital Audit Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Email_Email_Count_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Email - Email Count Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Email_Product_Live_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Email - Product Live Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Email_Rate_Request_Submittal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you want this person to receive copies of new rates requests for this media partner.</inlineHelpText>
        <label>Auto Email - Rate Request Submittal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Email_Website_Audit_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Email - Website Audit Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behavioral_Score__c</fullName>
        <label>Behavioral Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Time_To_Call__c</fullName>
        <label>Best Time To Call</label>
        <picklist>
            <picklistValues>
                <fullName>Early Morning 6am - 9am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morning 9am - 12pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Afternoon 12pm - 2pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Afternoon 2pm - 4pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon 4pm - 6pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening 6pm - 8pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <picklist>
            <picklistValues>
                <fullName>The Leaf-Chronicle, Clarksville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Jackson Sun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Daily News Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murfreesboro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Tennessean, Nashville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBIR-TV, Knoxville</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>TEXT(Account.Partner_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer with Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Back To Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Description__c</fullName>
        <label>Deal Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_of_the_Day_Capture_Date__c</fullName>
        <label>Deal of the Day Capture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demographic_Score__c</fullName>
        <label>Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <formula>Account.Do_Not_Call__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_PostAt__c</fullName>
        <formula>MID(Email, (FIND(&quot;@&quot;, Email)),255)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Post@</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Status__c</fullName>
        <label>Engagement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Gen Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Engaged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Five9C2CCampaignName__c</fullName>
        <formula>&quot;Click-To-Call&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Five9C2CCampaignName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GO Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Good_Market_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Good Market Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__HubSpot_Intelligence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HubSpot Intelligence</label>
        <referenceTo>HubSpot_Inc__HubSpot_Intelligence__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InactiveStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to mark Affiliated contacts as inactive in the system.  By Marking this field inactive the record type is switched to Inactive Affiliated Contact</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPI_Avg_Time_To_Close__c</fullName>
        <label>KPI - Avg Time To Close</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Dig_Audit_Closed_30__c</fullName>
        <defaultValue>0</defaultValue>
        <label>KPI - Dig Audit Closed 90</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Dig_Audit_Closed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>KPI - Dig Audit Closed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Dig_Audit_Converts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>KPI - Dig Audit Converts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Dig_Audit_Requests_30__c</fullName>
        <defaultValue>0</defaultValue>
        <label>KPI - Dig Audit Requests 90</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Dig_Audit_Requests__c</fullName>
        <defaultValue>0</defaultValue>
        <label>KPI - Dig Audit Requests</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Dig_Audit_Won_Value_30__c</fullName>
        <label>KPI - Dig Audit Won Value 90</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KPI_Dig_Audit_Won_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>KPI - Dig Audit Won Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KPI_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KPI - Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Datetime__c</fullName>
        <description>Notes the datetime of the most recently added activity.</description>
        <label>Last Activity Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <inlineHelpText>Used by admins to describe the Lead Source in greater detail.</inlineHelpText>
        <label>Lead Source Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Additional Contacts</relationshipLabel>
        <relationshipName>ContactsOnLead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Decision Maker?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Market_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Market Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Enhancement_Requestor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to Determine Who Is Allowed to Submit Product Enhancements</description>
        <label>Product Enhancement Requestor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Source__c</fullName>
        <label>Promotion Source</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_TB_Contract__c</fullName>
        <description>HYPERLINK(&quot;https://na10.salesforce.com/email/author/emailauthor.jsp?retURL=/&amp;p24_lkid=&amp;rtype=003&amp;p2_lkid=Id&amp;p2=FirstName&amp;template_id=00XF0000001QXsu&amp;p5=neil.wingate@gannett.com&quot;,&quot;DC Proposal&quot;)</description>
        <formula>HYPERLINK(&quot;/email/author/emailauthor.jsp?p24_lkid=&amp;rtype=003&amp;p2_lkid=&quot;+Id+&quot;&amp;p2=&quot;+FirstName+&quot;&amp;template_id=00XF0000001QXsu&amp;p5=neil.wingate@gannett.com&quot;,&quot;DC Proposal&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send TB Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Test_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Test Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <picklist>
            <picklistValues>
                <fullName>Buy With Me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Dealster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Chicken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doozy of a Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Run</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>icoupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KGB Deals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LocalDines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Zoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weforia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yollar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Alert_Options__c</fullName>
        <label>Auto Email - Status Alert Options</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting OnBoard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting On Client Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting On Client Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled Non-Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfilled-Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--Internal Use Only--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused:Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused:No Contract</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Survey_Results__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Results</label>
        <referenceTo>Survey_Results__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sync_With_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync With Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchKey__c</fullName>
        <formula>FirstName &amp; LastName &amp; Email &amp; Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MatchKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchLevel__c</fullName>
        <label>Match Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchScore__c</fullName>
        <label>MatchScore</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Campaign__c</fullName>
        <label>Target Campaign</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Submitter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Submitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <label>Zendesk Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zendesk_OutofSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <label>Zendesk_oldTags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__isCreatedUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in trigger to prevent looping of after insert and update. This flag is used to stop the contact that came for creation to get updated again thereby preventing the loop</description>
        <label>isCreatedUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__zendesk_id__c</fullName>
        <label>Zendesk User Id</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Contact&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Marketo_Segmentation__c</fullName>
        <label>Marketo Segmentation</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Contact_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/Contact_Full_List?id=&quot; &amp; Id, IMAGE(&quot;https://www.marketo.com/salesforce/images/applicationLink.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Contact&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ResponseTime__c</fullName>
        <description>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</description>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__TimeZoneSidKey__c</fullName>
        <description>This field will store the TimeZoneSidKey for the Contact.</description>
        <label>TimeZone Sid Key</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>radius__Hours__c</fullName>
        <label>Hours</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AffiliatesAwaitingOnboard</fullName>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status_Alert_Options__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Affiliated</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status_Alert_Options__c</field>
            <operation>includes</operation>
            <value>Awaiting OnBoard</value>
        </filters>
        <label>Affiliates Awaiting Onboard</label>
    </listViews>
    <listViews>
        <fullName>AffiliateswAutoEmailLive</fullName>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Auto_Email_Product_Live_Notice__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Affiliated</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Auto_Email_Product_Live_Notice__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Affiliates w/ Auto Email Live</label>
    </listViews>
    <listViews>
        <fullName>AffiliateswAutoEmailLiveAlert</fullName>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Auto_Email_Product_Live_Notice__c</columns>
        <columns>Status_Alert_Options__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Affiliated</value>
        </filters>
        <filters>
            <field>Auto_Email_Product_Live_Notice__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Affiliates w/ Live Alert</label>
    </listViews>
</CustomObject>